--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 
-    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/dissapear.js"></script>
 
   </head>
 
@@ -29,6 +29,7 @@
           <a class="nav--link" href="#">hiv10</a>
           <a class="nav--link" href="#">yljpwlz</a>
           <a class="nav--link" href="#">zovw</a>
+          <button class= "nab--link" type="button">Click Me!</button>
         </div>
     </nav>
   </div>
@@ -42,6 +43,7 @@
                                   <a class="nav--link" href="#">about</a>
                                   <a class="nav--link" href="#">recipes</a>
                                   <a class="nav--link" href="#">shop</a>
+                                  <button class= "nab--link" type="button">Click Me!</button>
                                 </div>
                             </nav>
                           </div>
