--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <a class="nav--link" href="#">hiv10</a>
           <a class="nav--link" href="#">yljpwlz</a>
           <a class="nav--link" href="#">zovw</a>
-          <button class= "nab--link" type="button">Click Me!</button>
+          <a href="#"><button class= "nav--link" type="button">decrypt</button></a>
         </div>
     </nav>
   </div>
@@ -43,7 +43,7 @@
                                   <a class="nav--link" href="#">about</a>
                                   <a class="nav--link" href="#">recipes</a>
                                   <a class="nav--link" href="#">shop</a>
-                                  <button class= "nab--link" type="button">Click Me!</button>
+                                  <a href="#"><button class= "nav--link" type="button">encrypt</button></a>
                                 </div>
                             </nav>
                           </div>
